[gd_scene load_steps=8 format=2]

[ext_resource path="res://Common/ZCOOLKuaiLe-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Settings/Settings.gd" type="Script" id=2]
[ext_resource path="res://Common/arrowLeft.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 54
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 38
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 38
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "settings"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( 0, 0 ) ]
}

[node name="Settings" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1240.0
margin_bottom = 680.0
color = Color( 0.431373, 0.52549, 0.815686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Control"]
margin_left = 20.0
margin_top = 20.0
margin_right = 70.0
margin_bottom = 70.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 501.5
margin_top = 50.0
margin_right = 738.5
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="Control"]
margin_left = 250.0
margin_top = 250.0
margin_right = 371.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 2 )
text = "Music: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXLabel" type="Label" parent="Control"]
margin_left = 250.0
margin_top = 400.0
margin_right = 350.0
margin_bottom = 439.0
custom_fonts/font = SubResource( 3 )
text = "SFX: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="Control"]
margin_left = 490.0
margin_top = 250.0
margin_right = 640.0
margin_bottom = 275.0
rect_scale = Vector2( 2, 2 )
hint_tooltip = "Music Volume"
min_value = -80.0
max_value = -10.0
step = 3.0
value = -12.0
rounded = true
scrollable = false
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSlider" type="HSlider" parent="Control"]
margin_left = 490.0
margin_top = 400.0
margin_right = 640.0
margin_bottom = 425.0
rect_scale = Vector2( 2, 2 )
hint_tooltip = "Music Volume"
min_value = -80.0
max_value = -10.0
step = 3.0
value = -12.0
rounded = true
scrollable = false
tick_count = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/settings = SubResource( 4 )

[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="value_changed" from="Control/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Control/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
